yazılar resimler ve yeni tasarım eklendi

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -6,10 +6,15 @@
 </head>
 <body>
 
-<h1>merhaba</h1>
-<p class="yazi">haluk galp irem</p>
-<img class="resim" src="kedi.jpg" alt="Italian Trulli">
-<img class="resim" src="köpek.jpg" alt="Italian Trulli">
-<button class="buton">buton</button>
+<h1 class="baslik">ANASAYFA</h1>
+<a href="menu.html">
+    <h1 class="altbaslik">Menü</h1>
+</a>
+
+<h1 class="altbaslik1">Tur Rehberi</h1>
+<p class="yazi">Karadenizin incisi Trabzon</p>
+<img class="resim" src="meydan.jpg" alt="Italian Trulli">
+<img class="resim" src="boztepe.jpg" alt="Italian Trulli">
+<button class="buton">Daha fazla bilgi</button>
 </body>
 </html>
